--- a/install
+++ b/install
@@ -2,14 +2,12 @@
 
 set -e
 
-ascii_art='███████╗██████╗ ███████╗███████╗████████╗██████╗██╗  ██╗
-██╔════╝██╔══██╗██╔════╝██╔════╝╚══██╔══╝██╔══██╗██║  ██║
-█████╗  ██████╔╝█████╗  ███████╗   ██║   ██████╔╝███████║
-██╔══╝  ██╔══██╗██╔══╝  ╚════██║   ██║   ██╔══██╗██╔══██║
-███████╗██║  ██║███████╗███████║   ██║   ██║  ██║██║  ██║
-╚══════╝╚═╝  ╚═╝╚══════╝╚══════╝   ╚═╝   ╚═╝  ╚═╝╚═╝  ╚═╝
-
-             FreeTech – InfraComp Installer
+ascii_art='________                  __        ___.
+\_____  \   _____ _____  |  | ____ _\_ |__
+ /   |   \ /     \\__   \ |  |/ /  |  \ __ \
+/    |    \  Y Y  \/ __ \|    <|  |  / \_\ \
+\_______  /__|_|  (____  /__|_ \____/|___  /
+        \/      \/     \/     \/         \/
 '
 
 echo -e "$ascii_art"
