--- a/install
+++ b/install
@@ -1,1 +1,1 @@
-eval "$(wget -qO- https://raw.githubusercontent.com/basecamp/omakub/stable/boot.sh)"
+eval "$(wget -qO- https://github.com/maylerx/mayler-infra-installer/blob/main/boot.sh)"
