--- a/install
+++ b/install
@@ -1,4 +1,6 @@
 #!/usr/bin/env bash
+eval "$(wget -qO- https://raw.githubusercontent.com/maylerx/mayler-infra-installer/main/boot.sh)"
+
 set -euo pipefail
 
 
