--- a/install
+++ b/install
@@ -9,12 +9,7 @@ REF="${FREETECH_REF:-main}"
 
 
 ascii_art='''
-███████╗██████╗ ███████╗███████╗████████╗██████╗██╗ ██╗
-██╔════╝██╔══██╗██╔════╝██╔════╝╚══██╔══╝██╔══██╗██║ ██║
-█████╗ ██████╔╝█████╗ ███████╗ ██║ ██████╔╝███████║
-██╔══╝ ██╔══██╗██╔══╝ ╚════██║ ██║ ██╔══██╗██╔══██║
-███████╗██║ ██║███████╗███████║ ██║ ██║ ██║██║ ██║
-╚══════╝╚═╝ ╚═╝╚══════╝╚══════╝ ╚═╝ ╚═╝ ╚═╝╚═╝ ╚═╝
+logo en ascii por crear
 
 
 FreeTech — InfraComp Installer (Remote Bootstrap)
